Enable gpg signing of built artifacts